yaml/athena-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: athena-database
  labels:
    app: athena
    role: db
spec:
  selector:
    matchLabels:
      app: athena
      role: db
  template:
    metadata:
      labels:
        app: athena
        role: db
    spec:
      containers:
        - name: athena-db
          image: #DATABASE IMAGE HERE
          ports:
            - containerPort: 1433
